# market_analysis

./: .gitignore  README.md  ict.py  main.py  pyproject.toml  yfinance.ipynb
backend/: requirements.txt
backend/backend/: main.py
backend/backend/src/: alert_generator.py  data_fetcher.py  decision_agent.py  market_calendar.py  pattern_analyzer.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: AlertsPanel.tsx  CandlestickChart.tsx
