[project]
name = "market-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "ipykernel>=6.29.5",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pandas-market-calendars>=5.0.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "uvicorn==0.24.0",
    "yfinance==0.2.33",
]
